[project]
name = "mixcloud-backup"
version = "0.1.0"
description = "Backup your entire Mixcloud account—including uploads, playlists, and orphaned tracks—and generate navigation-friendly LRC files for chapter/track navigation in any media player. mixcloud-backup automates high-quality downloads, embeds tracklists as lyrics, and helps you organize your Mixcloud audio library with ease."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47.0",
    "requests>=2.32.5",
    "rich>=13.9.0",
    "yt-dlp>=2026.2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
